@@ -1,5 +1,11 @@
 2009-03-12	Jannis Pohlmann <jannis@xfce.org>
 
+	* libxfce4menu/xfce-menu-monitor.h, libxfce4menu/xfce-menu.c: Try to
+	  fix broken API docs syntax and add docs for the
+	  XfceMenuMonitorVTable members.
+
+2009-03-12	Jannis Pohlmann <jannis@xfce.org>
+
 	* libxfce4menu/xfce-menu-directory.{c,h}: Add function
 	  xfce_menu_directory_equal() which compares two XfceMenuDirectory
 	  objects based on their GFile members.
